--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "test"
   },
   "author": "Tomio Mizoroki",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "mocha": "^2.3.4"
+  }
 }
